--- a/CORSBackend/web.config
+++ b/CORSBackend/web.config
@@ -2,7 +2,9 @@
 <configuration>
   <system.webServer>
     <cors enabled="true" failUnlistedOrigins="true">
-      <add origin="*" />
+      <add origin="*">
+        <allowHeaders allowAllRequestedHeaders="true" />
+      </add>
     </cors>
     <staticContent>
         <remove fileExtension=".json" />
